tests/transpiler/x/ocaml/in_operator_extended.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  let xs = [1; 2; 3] in
  let ys = (List.filter_map (fun x -> if ((x mod 2) == 1) then Some (x) else None) xs) in
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_bool ((List.mem 1 ys))]));
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_bool ((List.mem 2 ys))]));
  let m = [("a", 1)] in
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_bool ((List.mem "a" m))]));
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_bool ((List.mem "b" m))]));
  let s = "hello" in
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_bool ((let len_s = String.length s and len_sub = String.length "ell" in let rec aux i = if i + len_sub > len_s then false else if String.sub s i len_sub = "ell" then true else aux (i + 1) in aux 0))]));
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_bool ((let len_s = String.length s and len_sub = String.length "foo" in let rec aux i = if i + len_sub > len_s then false else if String.sub s i len_sub = "foo" then true else aux (i + 1) in aux 0))]));
